# Sample-Rule-Extractor

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  real_alias_map_generator.py  symptom_sample.txt  vite.config.ts  场景管理配置优化分析报告.docx  故障症状表场景.txt  样本.txt
_analysis_ai_script_generator/: README.md  metadata.json  package-lock.json  package.json
_analysis_ai_script_generator/app/: globals.css  layout.tsx  page.tsx
_analysis_ai_script_generator/hooks/: use-app.tsx
_analysis_ai_script_generator/lib/: ai.ts  scenes.ts
_analysis_ai_script_generator/python_runtime/: scaffold.py
docs/: analysis.md  expert-requirements-diagnosis.md  same-type-project-integration-plan.md  simplification.md  task-plan.md  项目分析报告.md
examples/: remove_steps_sample.txt  symptom_sample.txt
examples/test_batch/: symptom_1.txt  symptom_4.json
python_runtime/: runner.py
python_runtime/scaffold/: extract_scaffold.py
scene_templates/: check_confirmation.json  diagnosis_flow.json  repair_inspection.json  repair_install.json  repair_tool.json  symptom_table.json  warning_notice.json
scripts/: run_flow_test.py
shencha/docs/: 代码审查说明文档.md
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/analysis/: enforce.rs  mock.rs  mod.rs  prompt.rs  scene.rs
src-tauri/src/commands/: analysis.rs  clipboard.rs  llm.rs  mod.rs  runner.rs  script.rs
src-tauri/src/llm/: client.rs  config.rs  mod.rs  types.rs
src-tauri/src/models/: mod.rs
src-tauri/src/script/: mod.rs
(+109 files in other folders)
