[package]
name = "sample-driven-rule-extractor"
version = "0.1.0"
description = "Sample driven scene rule extractor desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "sample_driven_rule_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
chrono = { version = "0.4.42", features = ["serde"] }
enigo = "0.1.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "=2.9.1", features = [] }
tauri-plugin-opener = "=2.5.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
